--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,3 +2,9 @@ version: v1
 plugins:
   - name: go
     out: out/go
+    opt: paths=source_relative
+  - name: go-grpc
+    out: out/go
+    opt:
+      - paths=source_relative
+      - require_unimplemented_servers=false
